--- a/languages/cpp/parser/CMakeLists.txt
+++ b/languages/cpp/parser/CMakeLists.txt
@@ -6,6 +6,7 @@ add_definitions( -DKDE_DEFAULT_DEBUG_AREA=9040 )
 add_subdirectory(rpp)
 add_subdirectory(tests)
 add_subdirectory(headergen)
+add_subdirectory(ast-view)
 
 ########### next target ###############
 
