Link CPP DUChain library into AST viewer.

--- a/languages/cpp/parser/ast-view/CMakeLists.txt
+++ b/languages/cpp/parser/ast-view/CMakeLists.txt
@@ -2,7 +2,7 @@
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 
 set( AST_VIEW_LIBS 
-${KDE4_KDECORE_LIBS} ${KDE4_KTEXTEDITOR_LIBS} kdev4cppparser)
+${KDE4_KDECORE_LIBS} ${KDE4_KTEXTEDITOR_LIBS} kdev4cppparser kdev4cppduchain)
 
 set ( 	ast_view_SRCS
 		main.cpp
